# rust_netlify

./: Cargo.toml  LICENSE_MIT  README.md
src/: main.rs
