[package]
name = "poc"
version = "0.1.0"
authors = ["ptrkalm <pkalmuczak@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = {version = "*", features = ["sqlite", "chrono"]}
libsqlite3-sys = { version = "0.17.3", features = ["bundled"]}
actix-web = "3"